--- a/Assets/Resources/i18n/ja.txt
+++ b/Assets/Resources/i18n/ja.txt
@@ -1,7 +1,7 @@
-Use eye-tracking=アイトラッキングを使用
+Use eye-tracking=アイトラッキング使用
 Eye-tracking type=トラッキングデバイス
 Gaze max angle (degee)=視線最大角度
-Use facial tracking=フェイストラッキングを使用
+Use facial tracking=フェイストラッキング使用
 Debug Mode=デバッグモード
 Save=保存
 Gain=値の調整
@@ -10,3 +10,8 @@ OSC Key=OSCキー
 Essential=主要データ
 All=全て表示
 Reset the center of gaze=現在の視線を中央に設定
+Stopped=停止
+Starting...=起動中…
+Stopping...=終了中…
+Running=実行中
+Unavailable=利用不可
