Mod: add translated words

--- a/Assets/Resources/i18n/ko.txt
+++ b/Assets/Resources/i18n/ko.txt
@@ -10,3 +10,8 @@ OSC Key=OSC 티
 Essential=주된데이터
 All=전부 표시
 Reset the center of gaze=현재의 시선을 중심로 설정
+Stopped=정지
+Starting...=기동중…
+Stopping...=종료중…
+Running=실행중
+Unavailable=상용 불가
