--- a/Assets/Resources/i18n/zh-hant.txt
+++ b/Assets/Resources/i18n/zh-hant.txt
@@ -6,3 +6,8 @@ Debug Mode=調試模式
 Essential=主要項目
 All=全部項目
 Reset the center of gaze=校准注視中心
+Stopped=停止
+Starting...=啟動…
+Stopping...=关闭…
+Running=動作中
+Unavailable=不可用
