--- a/Assets/Resources/i18n/zh-hant.txt
+++ b/Assets/Resources/i18n/zh-hant.txt
@@ -5,6 +5,7 @@ Use facial tracking=使用表情偵測
 Debug Mode=調試模式
 Essential=主要項目
 All=全部項目
+Center=中心
 Reset the center of gaze=校准注視中心
 Stopped=停止
 Starting...=啟動…
