--- a/AkaneFacialOSC/Properties/Resources.ko-KR.resx
+++ b/AkaneFacialOSC/Properties/Resources.ko-KR.resx
@@ -118,132 +118,132 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="ButtonCancel" xml:space="preserve">
-    <value>キャンセル</value>
+    <value>취소</value>
   </data>
   <data name="ButtonClose" xml:space="preserve">
-    <value>閉じる</value>
+    <value>닫기</value>
   </data>
   <data name="ButtonConfig" xml:space="preserve">
-    <value>設定</value>
+    <value>설정</value>
   </data>
   <data name="ButtonEyeTracking" xml:space="preserve">
-    <value>アイトラッキング</value>
+    <value>아이 트래킹</value>
   </data>
   <data name="ButtonFaceTracking" xml:space="preserve">
-    <value>顔トラッキング</value>
+    <value>페이셜 트래킹</value>
   </data>
   <data name="ButtonOK" xml:space="preserve">
     <value>OK</value>
   </data>
   <data name="ButtonResetAll" xml:space="preserve">
-    <value>すべてリセット</value>
+    <value>전부 초기화</value>
   </data>
   <data name="ButtonRevert" xml:space="preserve">
-    <value>元に戻す</value>
+    <value>되돌리기</value>
   </data>
   <data name="ConfigButtonSave" xml:space="preserve">
-    <value>保存</value>
+    <value>저장</value>
   </data>
   <data name="ConfigButtonSaveDirty" xml:space="preserve">
-    <value>保存 (*)</value>
+    <value>저장 (*)</value>
   </data>
   <data name="ConfigEyeTracker" xml:space="preserve">
-    <value>アイトラッカー</value>
+    <value>아이 트래커</value>
   </data>
   <data name="ConfigEyeTrackerTargetFps" xml:space="preserve">
-    <value>アイトラッカー FPS</value>
+    <value>아이 트래커 묵표 FPS</value>
   </data>
   <data name="ConfigLanguage" xml:space="preserve">
     <value>Language</value>
   </data>
   <data name="ConfigLipTracker" xml:space="preserve">
-    <value>フェイシャルトラッカー</value>
+    <value>페이셜 트래커</value>
   </data>
   <data name="ConfigLipTrackerTargetFps" xml:space="preserve">
-    <value>フェイシャルトラッカーFPS</value>
+    <value>페이셜 트래커 묵표 FPS</value>
   </data>
   <data name="ConfigMaxGazeAngle" xml:space="preserve">
-    <value>視線の最大範囲 (degree)</value>
+    <value>시선의 최대 각도 (degree)</value>
   </data>
   <data name="ConfigSelectAll" xml:space="preserve">
-    <value>すべて選択</value>
+    <value>모두 선택</value>
   </data>
   <data name="ConfigTheme" xml:space="preserve">
-    <value>テーマ</value>
+    <value>테마</value>
   </data>
   <data name="DialogResetAllMessage" xml:space="preserve">
-    <value>すべての設定をデフォルトに戻します．</value>
+    <value>모두 설정을 초깃값에 돌려놓습니다.</value>
   </data>
   <data name="DialogRevertMessage" xml:space="preserve">
-    <value>すべての設定の変更を戻して起動時の状態に戻します．</value>
+    <value>기동 했을 때의 설정을 복원합니다.</value>
   </data>
   <data name="MessageCalibrationRequired" xml:space="preserve">
-    <value>Vive Pro Eye のアイトラッキングのキャリブレーションが必要です．キャリブレーションが完了するまで使用できない可能性があります．</value>
+    <value>Vive Pro Eye를 교정해야 합니다. 교정할 때까지 사용할 수 없는 가능성이 있습니다.</value>
   </data>
   <data name="MessageCurrentVersion" xml:space="preserve">
-    <value>現在のバージョン</value>
+    <value>현재</value>
   </data>
   <data name="MessageDeviceError" xml:space="preserve">
-    <value>デバイスの起動時にエラーが発生しました:</value>
+    <value>데바이스를 기동할 때 오류가 발생했습니다:</value>
   </data>
   <data name="MessageDifferentVersionExists" xml:space="preserve">
-    <value>他のバージョンが公開されています:</value>
+    <value>다른 버전이 공개뒸습니다:</value>
   </data>
   <data name="MessageErrorDetail" xml:space="preserve">
-    <value>エラーの詳細:</value>
+    <value>오류 상세:</value>
   </data>
   <data name="MessageLatestVersion" xml:space="preserve">
-    <value>最新バージョン</value>
+    <value>최신 버전</value>
   </data>
   <data name="MessageLoadingConfigError" xml:space="preserve">
-    <value>保存された設定ファイルが読み込めませんでした．是フォルトのあたいを使用しています．</value>
+    <value>저장한 설정을 읽을 수 없었습니다. 초기치를 사용합니다.</value>
   </data>
   <data name="MessageNotProEye" xml:space="preserve">
-    <value>Vive Pro Eye が接続されていません．デバイスの接続状態を確認してください．</value>
+    <value>Vive Pro Eye가 접속되고 있지 않습니다. Vive Pro Eye가 접속되고 있지 않습니다. 데바이스 상태를 확인하세요.</value>
   </data>
   <data name="MessageUpdateExists" xml:space="preserve">
-    <value>新しいバージョンが公開されました．</value>
+    <value>새 버전이 공개뒸습니다:</value>
   </data>
   <data name="MessageUpdateFailed" xml:space="preserve">
-    <value>アップデートの確認に失敗しました．</value>
+    <value>업데이트를 확인할 수 없었습니다.</value>
   </data>
   <data name="OSCHeaderClip" xml:space="preserve">
-    <value>クリップ</value>
+    <value>Clip</value>
   </data>
   <data name="OSCHeaderCurve" xml:space="preserve">
-    <value>カーブの調整</value>
+    <value>보정 곡선</value>
   </data>
   <data name="OSCHeaderGain" xml:space="preserve">
-    <value>ゲイン</value>
+    <value>값를 조정</value>
   </data>
   <data name="OSCHeaderKey" xml:space="preserve">
-    <value>OSC キー</value>
+    <value>OSC 키</value>
   </data>
   <data name="OSCHeaderRange" xml:space="preserve">
-    <value>範囲</value>
+    <value>범위</value>
   </data>
   <data name="OSCHeaderValue" xml:space="preserve">
-    <value>値</value>
+    <value>송신치</value>
   </data>
   <data name="TrackingDisabled" xml:space="preserve">
-    <value>停止</value>
+    <value>정지</value>
   </data>
   <data name="TrackingRunning" xml:space="preserve">
-    <value>実行中</value>
+    <value>실행중</value>
   </data>
   <data name="TrackingStarting" xml:space="preserve">
-    <value>起動中…</value>
+    <value>기동중…</value>
   </data>
   <data name="TrackingStopping" xml:space="preserve">
-    <value>終了中…</value>
+    <value>종료중…</value>
   </data>
   <data name="TrackingUnavailable" xml:space="preserve">
-    <value>利用不可</value>
+    <value>상용 불가</value>
   </data>
   <data name="WindowHeaderDeviceConfigs" xml:space="preserve">
-    <value>トラッキング設定</value>
+    <value>트래킹 설정</value>
   </data>
   <data name="WindowHeaderGeneralConfigs" xml:space="preserve">
-    <value>全般設定</value>
+    <value>전반 설정</value>
   </data>
 </root>
