--- a/AkaneFacialOSC/Properties/Resources.resx
+++ b/AkaneFacialOSC/Properties/Resources.resx
@@ -276,11 +276,11 @@
   <data name="TrackingUnavailable" xml:space="preserve">
     <value>Unavailable</value>
   </data>
-  <data name="Validation" xml:space="preserve">
-    <value />
-  </data>
   <data name="ValidationNoValue" xml:space="preserve">
     <value>No value inputted.</value>
+  </data>
+  <data name="ValidationShouldBePositive" xml:space="preserve">
+    <value>The value should be positive number.</value>
   </data>
   <data name="WindowHeaderDeviceConfigs" xml:space="preserve">
     <value>Tracking Configurations</value>
