--- a/AkaneFacialOSC/Properties/Resources.ja-JP.resx
+++ b/AkaneFacialOSC/Properties/Resources.ja-JP.resx
@@ -210,6 +210,9 @@
   <data name="MessageNotProEye" xml:space="preserve">
     <value>Vive Pro Eye が接続されていません．デバイスの接続状態を確認してください．</value>
   </data>
+  <data name="MessageUnexpectedError" xml:space="preserve">
+    <value>予期しないエラーが発生しました．</value>
+  </data>
   <data name="MessageUpdateExists" xml:space="preserve">
     <value>新しいバージョンが公開されました．</value>
   </data>
